--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
     <style>
-        #map { width: 1080px; height: 700px; }
+        /*#map { width: 1080px; height: 700px; }*/
         body { font: 16px/1.4 "Helvetica Neue", Arial, sans-serif; }
         .ghbtns { position: relative; top: 4px; margin-left: 5px; }
         a { color: #0077ff; }
@@ -30,13 +30,14 @@
 </head>
 <body>
 
-<p>
-    A 10,000-point demo of Leaflet.heat, a tiny and fast Leaflet heatmap plugin.
-    <!-- <iframe class="ghbtns" src="http://ghbtns.com/github-btn.html?user=Leaflet&amp;repo=Leaflet.heat&amp;type=watch&amp;count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe> -->
-</p>
+<div class = "rightpanel" style = "position:absolute; right:0; width:30%; height:100%; z-index: 20;">
+  <h2 style = "position:relative; font-family: Roboto; font-size: 24px; left: 5%; font-family:arial">Middle Schools in Asuncion, Paraguay</h2>
+  <div class = "description" style = "margin:5%;">
+    <p style = "font-family: Roboto; font-size: 14px;">Historically, Paraguay has not valued education highly. During Alfredo Stroessner Mattiauda’s presidency (1954–89), education initiatives took a backseat to economic concerns and the task of controlling political adversaries, and teacher salaries fell to extremely low levels. The constitution of 1992 attempted to remedy the long neglect of education. Article 85 of the constitution mandates that 20% of the government dibudget be designated for educational expenditures. This measure, however, has proven to be impractical and has been largely ignored.</p>
+  </div>
+</div>
 
-<div id="map"></div>
+<div id="map" style = "position:absolute; top:0; bottom:0; width:70%;"></div>
 
 <!-- <script src="../node_modules/simpleheat/simpleheat.js"></script>
 <script src="../src/HeatLayer.js"></script> -->
@@ -50,7 +51,7 @@
 
 <script>
 
-var map = L.map('map').setView([-25.288145, -57.625214], 11);
+var map = L.map('map').setView([-25.288145, -57.485214], 11);
 var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
 }).addTo(map);
