--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 
 <script>
 
+//REFERENCE TUTORIAL
+// http://www.d3noob.org/2014/02/generate-heatmap-with-leafletheat-and.html
+// https://www.patrick-wied.at/static/heatmapjs/example-heatmap-leaflet.html
+
 var map = L.map('map').setView([-25.288145, -57.485214], 11);
 var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
